--- a/servers/execution/runner/jest.config.json
+++ b/servers/execution/runner/jest.config.json
@@ -16,8 +16,7 @@
     "node_modules",
     "./dist",
     "../src/app.module.ts",
-    "../src/main.ts",
-    "../src/runner.ts"
+    "../src/main.ts"
   ],
   "extensionsToTreatAsEsm": [".ts"],
   "moduleFileExtensions": [
@@ -25,7 +24,7 @@
     "json",
     "ts"
   ],
-  "modulePathIgnorePatterns": ["config"],
+  "modulePathIgnorePatterns": [],
   "coverageDirectory": "<rootDir>/coverage/",
   "coverageThreshold": {
     "global": {
