--- a/servers/execution/runner/runner.yaml.sample
+++ b/servers/execution/runner/runner.yaml.sample
@@ -1,2 +1,6 @@
 port: 5000
-location: "scripts" #directory location of scripts
+location: 'script' #directory location of scripts
+commands:
+  - create
+  - execute
+  - terminate
