Fixes problems in deploy/docker setup

--- a/deploy/docker/.env.local
+++ b/deploy/docker/.env.local
@@ -1,3 +1,3 @@
-DTAAS_DIR='/home/dtaas/Documents/git/into-cps/DTaaS'
-CLIENT_CONFIG='/home/dtaas/Documents/git/into-cps/DTaaS/deploy/config/client/env.local.js'
-username1='TestUserDTaaS'
+DTAAS_DIR='/Users/<Username>/DTaaS'
+CLIENT_CONFIG='/Users/<Username>/DTaaS/deploy/config/client/env.local.js'
+username1='user1'
