--- a/deploy/docker/.env.server
+++ b/deploy/docker/.env.server
@@ -4,6 +4,6 @@ OAUTH_URL='https://gitlab.foo.com'
 CLIENT_ID='xx'
 CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
-CLIENT_CONFIG='/home/Desktop/DTaaS/deploy/config/client/env.local.js'
+CLIENT_CONFIG='/Users/<Username>/DTaaS/deploy/config/client/env.js'
 username1='user1'
 username2='user2'
