--- a/docker/.env
+++ b/docker/.env
@@ -4,6 +4,6 @@ OAUTH_URL='https://gitlab.com'
 CLIENT_ID='xx'
 CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
-OAUTH_CONF_FILEPATH='/Users/<Username>/DTaaS/docker/conf.local'
+OAUTH_CONF_FILEPATH='/Users/<Username>/DTaaS/docker/conf.dev'
 username1='user1'
 username2='user2'
