Fixes mistakes in README

--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,4 @@
-DTAAS_DIR='/home/dtaas/Documents/git/into-cps/DTaaS'
+DTAAS_DIR='/Users/<Username>/DTaaS'
 SERVER_DNS='localhost'
 OAUTH_URL='https://gitlab.com'
 CLIENT_ID='xx'
