--- a/deploy/docker/compose.server.yml
+++ b/deploy/docker/compose.server.yml
@@ -17,39 +17,35 @@ services:
       - frontend
       - users
 
-  client:
-    build: 
-      context: ${DTAAS_DIR}/
-      dockerfile: ${DTAAS_DIR}/docker/dev/client.dockerfile
-    restart: unless-stopped
-    volumes:
-      - "${DTAAS_DIR}/client/config/local.js:/dtaas/client/build/env.js"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.client.entryPoints=web"
-      - "traefik.http.services.client.loadbalancer.server.port=4000"
-      - "traefik.http.routers.client.middlewares=traefik-forward-auth"
-      - "traefik.http.routers.client.rule=PathPrefix(`/`)"
-    networks:
-      - frontend
-
   libms:
-    build: 
-      context: ${DTAAS_DIR}/
-      dockerfile: ${DTAAS_DIR}/docker/dev/libms.dockerfile
+    image: intocps/libms:latest
     restart: unless-stopped
     volumes:
-      - ${DTAAS_DIR}/servers/lib/config/.env.default:/dtaas/libms/.env
+      - ${DTAAS_DIR}/deploy/config/lib.docker:/dtaas/libms/.env
       - ${DTAAS_DIR}/files:/dtaas/libms/files
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.libms.entryPoints=web"
       - "traefik.http.services.libms.loadbalancer.server.port=4001"
-      - "traefik.http.routers.libms.rule= PathPrefix(`/lib`)"
+      - "traefik.http.routers.libms.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/lib`)"
       - "traefik.http.routers.libms.middlewares=traefik-forward-auth"
     networks:
       - frontend
-  
+
+  client:
+    image: intocps/dtaas-web:latest
+    restart: unless-stopped
+    volumes:
+      - ${CLIENT_CONFIG}:/dtaas/client/build/env.js
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.client.entryPoints=web"
+      - "traefik.http.services.client.loadbalancer.server.port=4000"
+      - "traefik.http.routers.client.middlewares=traefik-forward-auth"
+      - "traefik.http.routers.client.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/`)"
+    networks:
+      - frontend
+
   user1:
     image: mltooling/ml-workspace-minimal:0.13.2
     restart: unless-stopped
@@ -63,7 +59,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.u1.entryPoints=web"
-      - "traefik.http.routers.u1.rule=PathPrefix(`/${username1}`) "
+      - "traefik.http.routers.u1.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/${username1}`)"
       - "traefik.http.routers.u1.middlewares=traefik-forward-auth"
     networks:
       - users
@@ -81,7 +77,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.u2.entryPoints=web"
-      - "traefik.http.routers.u2.rule=PathPrefix(`/${username2}`) "
+      - "traefik.http.routers.u2.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/${username2}`)"
       - "traefik.http.routers.u2.middlewares=traefik-forward-auth"
     networks:
       - users
@@ -90,7 +86,7 @@ services:
     image: thomseddon/traefik-forward-auth:latest
     restart: unless-stopped
     volumes:
-      - ${OAUTH_CONF_FILEPATH}:/conf
+      - ${DTAAS_DIR}/deploy/docker/conf.server:/conf
     environment:
       - DEFAULT_PROVIDER=generic-oauth
       - PROVIDERS_GENERIC_OAUTH_AUTH_URL=${OAUTH_URL}/oauth/authorize
@@ -107,7 +103,7 @@ services:
       - "traefik.enable=true"
 
       - "traefik.http.routers.redirect.entryPoints=web"
-      - "traefik.http.routers.redirect.rule=PathPrefix(`/_oauth`)"
+      - "traefik.http.routers.redirect.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/_oauth`)"
       - "traefik.http.routers.redirect.middlewares=traefik-forward-auth"
 
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.address=http://traefik-forward-auth:4181"
