--- a/docker/.env
+++ b/docker/.env
@@ -1,9 +1,9 @@
 DTAAS_DIR='/Users/<Username>/DTaaS'
-SERVER_DNS='foo.com'
-OAUTH_URL='https://gitlab.foo.com'
+SERVER_DNS='localhost'
+OAUTH_URL='https://gitlab.com'
 CLIENT_ID='xx'
 CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
-CLIENT_CONFIG='/home/Desktop/DTaaS/deploy/config/client/env.local.js'
+OAUTH_CONF_FILEPATH='/Users/<Username>/DTaaS/docker/conf.dev'
 username1='user1'
 username2='user2'
