Fixes mistake in libms.dockerfile

--- a/servers/lib/config/.env.default
+++ b/servers/lib/config/.env.default
@@ -1,6 +1,6 @@
 PORT='4001'
 MODE='local'
-LOCAL_PATH ='/Users/<Username>/DTaaS/files'
+LOCAL_PATH ='/dtaas/libms/files'
 LOG_LEVEL='debug'
 APOLLO_PATH='/lib'
 GRAPHQL_PLAYGROUND='true'
