Fixes mistakes in the npm package publishing step

--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -104,6 +104,8 @@ jobs:
 
       - name: Publish npm package
         run: |
+          # copy README.md to project root
+          cp servers/lib/README.md .
           cd servers/lib
           yarn install
           yarn build
