--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,46 +16,12 @@ theme:
 
 nav:
   - Home: index.md
-  - Admin:
-      - Overview: admin/overview.md
-      - Install:
-        - Steps: admin/steps.md
-        - Requirements: admin/requirements.md
-        - Authorization:
-          - Client: admin/client/auth.md
-          - Servers: admin/servers/auth.md
-        - Configuration:
-          - Client: admin/client/config.md
-          - Library: admin/servers/lib/config.md
-        - Docker:
-          - Localhost: admin/localhost.md
-          - Production: admin/host.md
-        - Vagrant:
-          - Base Box: admin/vagrant/base-box.md
-          - Single Machine: admin/vagrant/single-machine.md
-          - Two Machines: admin/vagrant/two-machines.md
-        - Services: admin/services.md
-      - CLI: admin/cli.md
-      - Independent Packages:
-        - Listing: admin/packages.md
-        - Library Microservice:
-          - NPM: admin/servers/lib/npm.md
-          - Docker: admin/servers/lib/docker.md
-        - Runner: user/servers/execution/runner/README.md
-      - Guides:
-        - Add user: admin/guides/add_user.md
-        - Remove user: admin/guides/remove_user.md
-        - Add Service: admin/guides/add_service.md
-        - Install Gitlab: admin/guides/gitlab.md
-        - Link services: admin/guides/link_service.md
-        - Common Assets: admin/guides/common_workspace_readonly.md
-        - HTTP Mode: admin/guides/hosting_site_without_https.md
   - User:
       - Motivation: user/motivation.md
       - Features: user/features.md
       - Website: user/website/index.md
-      - Library: 
-          - Assets: user/servers/lib/assets.md
+      - Reusable Assets: 
+          - Concept: user/servers/lib/assets.md
           - Microservice: user/servers/lib/LIB-MS.md
       - Digital Twins: 
           - Create: user/digital-twins/create.md
@@ -77,9 +43,42 @@ nav:
           - Incubator with NuRV Service: user/examples/incubator-NuRV-monitor-service/README.md
           - Water Tank Fault Injection with NuRV: user/examples/water_tank_FI_monitor/README.md
           - Codebase: https://github.com/INTO-CPS-Association/DTaaS-examples
+  - Admin:
+      - Install:
+        - Installation Scenarios: admin/overview.md
+        - Installation Steps: admin/steps.md
+        - Requirements: admin/requirements.md
+        - Authorization:
+          - Client: admin/client/auth.md
+          - Servers: admin/servers/auth.md
+        - Configuration:
+          - Client: admin/client/config.md
+          - Library: admin/servers/lib/config.md
+        - Docker:
+          - Localhost: admin/localhost.md
+          - Production: admin/host.md
+        - Vagrant:
+          - Base Box: admin/vagrant/base-box.md
+          - Single Machine: admin/vagrant/single-machine.md
+          - Two Machines: admin/vagrant/two-machines.md
+        - Services: admin/services.md
+      - CLI: admin/cli.md
+      - Independent Packages:
+        - Listing: admin/packages.md
+        - Library Microservice:
+          - NPM: admin/servers/lib/npm.md
+          - Docker: admin/servers/lib/docker.md
+      - Guides:
+        - Add user: admin/guides/add_user.md
+        - Remove user: admin/guides/remove_user.md
+        - Add Service: admin/guides/add_service.md
+        - Install Gitlab: admin/guides/gitlab.md
+        - Link services: admin/guides/link_service.md
+        - Common Assets: admin/guides/common_workspace_readonly.md
+        - HTTP Mode: admin/guides/hosting_site_without_https.md
   - FAQ: FAQ.md
   - Developer: 
-      - Overview: developer/index.md 
+      - Developer Guide: developer/index.md 
       - System:
         - Architecture: developer/system/architecture.md
         - Current Status: developer/system/current-status.md
