--- a/deploy/docker/compose.local.yml
+++ b/deploy/docker/compose.local.yml
@@ -18,7 +18,7 @@ services:
       - users
 
   client:
-    image: intocps/dtaas-web:latest
+    image: intocps/dtaas-web:0.3.5
     restart: unless-stopped
     volumes:
       - ${CLIENT_CONFIG}:/dtaas/client/build/env.js
