- This is a WIP   - Adds docker compose for secure hosting of application   - Fixes mistakes in documentation   - Found the problems in mistakes in pdf rendering of docs. Three     markdown files have rendering issues,

--- a/cli/users.server.yml
+++ b/cli/users.server.yml
@@ -1,7 +1,8 @@
 image: mltooling/ml-workspace-minimal:0.13.2
+restart: unless-stopped
 volumes:
-  - ${DTAAS_DIR}/files/common:/workspace/common
-  - ${DTAAS_DIR}/files/${username}:/workspace
+  - "${DTAAS_DIR}/files/common:/workspace/common"
+  - "${DTAAS_DIR}/files/${username}:/workspace"
 environment:
   - AUTHENTICATE_VIA_JUPYTER=
   - WORKSPACE_BASE_URL=${username}
