--- a/cli/users.server.secure.yml
+++ b/cli/users.server.secure.yml
@@ -9,8 +9,8 @@ environment:
 shm_size: 512m
 labels:
   - "traefik.enable=true"
-  - "traefik.http.routers.${username}.entryPoints=web"
-  - "traefik.http.routers.${username}.rule=PathPrefix(`/${username}`)"
+  - "traefik.http.routers.${username}.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/${username}`)"
+  - "traefik.http.routers.${username}.tls=true"
   - "traefik.http.routers.${username}.middlewares=traefik-forward-auth"
 networks:
   - users
