--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,7 @@ nav:
       - Website: user/website/index.md
       - Reusable Assets: 
           - Concept: user/servers/lib/assets.md
-          #- Microservice: user/servers/lib/LIB-MS.md
+          - Microservice: user/servers/lib/LIB-MS.md
       - Digital Twins: 
           - Create: user/digital-twins/create.md
           - Lifecycle: user/digital-twins/lifecycle.md
@@ -59,8 +59,8 @@ nav:
           - Production: admin/host.md
         - Vagrant:
           - Base Box: admin/vagrant/base-box.md
-          #- Single Machine: admin/vagrant/single-machine.md
-          #- Two Machines: admin/vagrant/two-machines.md
+          - Single Machine: admin/vagrant/single-machine.md
+          - Two Machines: admin/vagrant/two-machines.md
         - Services: admin/services.md
       - CLI: admin/cli.md
       - Independent Packages:
@@ -86,9 +86,9 @@ nav:
         - Concepts: developer/oauth/OAUTH2.0.md
         - System Design: developer/oauth/DESIGN.md
         - Microservice: developer/oauth/AUTHMS.md
-      #- Components:
-      #  - Client: developer/client/client.md
-      #  - Library Microservice: developer/servers/lib/lib-ms.md
+      - Components:
+        - Client: developer/client/client.md
+        - Library Microservice: developer/servers/lib/lib-ms.md
       - Testing: developer/testing/intro.md
       - Docker: developer/docker/docker.md
       - NPM Packages: developer/npm-packages.md
