--- a/client/package.json
+++ b/client/package.json
@@ -51,7 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "dotenv": "^16.1.4",
-    "eslint": "^8.54.0",
+    "eslint": "8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
