Logging out of Gitlab and clearing session storage (#793)
  - Refactors the signOut() function to remove
    code quality issues.
  - Removes OAuth2 related cookies and access tokens
  - Adds silent logout feature for logging out of OAuth2
    provided by traefik forward-auth

--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "stop": "npx kill-port 4000",
     "syntax": "npx eslint . --fix",
     "test:all": "yarn test:unit && yarn test:int && yarn test:e2e",
-    "test:e2e": "yarn build && yarn configapp:test && npx kill-port 4000 && yarn start >/dev/null & playwright test && npx kill-port 4000",
+    "test:e2e": "yarn build && yarn config:test && npx kill-port 4000 && yarn start >/dev/null & playwright test && npx kill-port 4000",
     "test:int": "jest -c ./jest.integration.config.json ../test/integration --coverage",
     "test:unit": "jest -c ./jest.config.json ../test/unitTests --coverage"
   },
