Fix name and import inconsistencies

--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -47,5 +47,8 @@
   "testRegex": "/test/.*\\.test.tsx?$",
   "modulePaths": [
     "<rootDir>/src/"
-  ]
+  ],
+  "moduleNameMapper": {
+    "^test/(.*)$": "<rootDir>/test/$1"
+  }
 }
