--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,7 +5,10 @@
     "sourceMap": true, //generate .map files
     "target": "es6", //target es6
     "jsx": "react", //use react
-    "types": ["react", "node"], //use react and node types
+    "types": [
+      "react",
+      "node"
+    ], //use react and node types
     "module": "esnext", //use esnext modules
     "moduleResolution": "node", //use node module resolution strategy node
     "experimentalDecorators": true, //allow experimental decorators for es7
@@ -17,10 +20,19 @@
     "strict": true, //enable all strict type-checking options
     "outDir": "dist", //output directory
     "baseUrl": "src", //base url for imports
+    "paths": {
+      "test/*": [
+        "../test/*"
+      ]
+    },
     "typeRoots": [
       "node_modules/@types" //use node_modules/@types for type definitions
     ],
     "strictNullChecks": true //enable strict null checks
   },
-  "exclude": ["**/node_modules/*", "babel.config.cjs", "dist"]
+  "exclude": [
+    "**/node_modules/*",
+    "babel.config.cjs",
+    "dist"
+  ]
 }
