--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -4,10 +4,21 @@
   "transform": {
     "^.+\\.tsx?$": "ts-jest"
   },
-  "transformIgnorePatterns": ["/node_modules/(?![d3-shape|recharts]).+\\.js$"],
+  "transformIgnorePatterns": [
+    "/node_modules/(?![d3-shape|recharts]).+\\.js$"
+  ],
   "collectCoverage": true,
-  "coverageReporters": ["text", "cobertura", "clover", "lcov", "json"],
-  "collectCoverageFrom": ["src/**/*.{ts,tsx}"],
+  "coverageReporters": [
+    "text",
+    "cobertura",
+    "clover",
+    "lcov",
+    "json"
+  ],
+  "testTimeout": 15000,
+  "collectCoverageFrom": [
+    "src/**/*.{ts,tsx}"
+  ],
   "coveragePathIgnorePatterns": [
     "node_modules",
     "build",
@@ -15,7 +26,11 @@
     "src/AppProvider.tsx",
     "src/store/store.ts"
   ],
-  "modulePathIgnorePatterns": ["test/e2e", "mocks", "config"],
+  "modulePathIgnorePatterns": [
+    "test/e2e",
+    "mocks",
+    "config"
+  ],
   "coverageDirectory": "<rootDir>/coverage/",
   "coverageThreshold": {
     "global": {
@@ -31,6 +46,10 @@
   },
   "verbose": true,
   "testRegex": "/test/.*\\.test.tsx?$",
-  "modulePaths": ["<rootDir>/src/"],
-  "setupFilesAfterEnv": ["<rootDir>/test/unitTests/jest.setup.ts"]
+  "modulePaths": [
+    "<rootDir>/src/"
+  ],
+  "moduleNameMapper": {
+    "^test/(.*)$": "<rootDir>/test/$1"
+  }
 }
