--- a/client/package.json
+++ b/client/package.json
@@ -89,6 +89,7 @@
     "@types/react-dom": "^18.2.17",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "monocart-coverage-reports": "^2.10.2",
     "playwright": "^1.32.1",
     "prettier": "^3.2.4",
     "shx": "^0.3.4",
