Install dependencies with playwright in gha

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           cd client/	
           yarn install
-          yarn playwright install
+          yarn playwright install --with-deps
           yarn test:int
           yarn test:unit
           yarn test:e2e
