--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,15 @@
   "type": "module",
   "scripts": {
     "build": "npx react-scripts build",
-    "clean": "npx rimraf build/ node_modules/ coverage/ playwright-report/  *.svg",
+    "clean": "npx rimraf build/ dist/ node_modules/ coverage/ playwright-report/  *.svg",
     "config:dev": "npx shx cp config/dev.js public/env.js && npx shx cp config/dev.js build/env.js",
     "config:local": "npx shx cp config/local.js public/env.js && npx shx cp config/local.js build/env.js",
     "config:prod": "npx shx cp config/prod.js public/env.js && npx shx cp config/prod.js build/env.js",
     "config:test": "npx shx cp config/test.js public/env.js && npx shx cp config/test.js build/env.js",
     "develop": "npx react-scripts start",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
+    "gitlab:compile": "npx tsc --project tsconfig.gitlab.json",
+    "gitlab:run": "node dist/gitlabDriver.js",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
     "start": "serve -s build -l 4000",
     "stop": "npx kill-port 4000",
