--- a/client/package.json
+++ b/client/package.json
@@ -50,9 +50,11 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/strip-ansi": "^5.2.1",
     "@types/styled-components": "^5.1.32",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "ansi-regex": "^6.0.1",
     "dotenv": "^16.1.4",
     "eslint": "8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -75,6 +77,7 @@
     "redux": "^4.2.1",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
+    "strip-ansi": "^7.1.0",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5"
   },
