--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -60,7 +60,7 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
-          path: playwright-report/
+          path: playwright-report/trace/
           retention-days: 30
 
       - name: Upload e2e test coverage to Codecov
