--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -56,7 +56,8 @@ jobs:
         run: |
           yarn test:e2e
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload Playwright Report
+        uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
