Fixes yarn commands

--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -24,7 +24,8 @@
     "build",
     "src/index.tsx",
     "src/AppProvider.tsx",
-    "src/store/store.ts"
+    "src/store/store.ts",
+    "src/util/gitlabDriver.ts"
   ],
   "modulePathIgnorePatterns": [
     "test/e2e",
