--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,13 @@
   "private": false,
   "type": "module",
   "scripts": {
-    "build": "npx react-scripts build",
-    "clean": "npx rimraf build/ dist/ node_modules/ coverage/ playwright-report/  *.svg",
+    "build": "npx shx cp config/gitlab.json src/util/gitlab.json && npx react-scripts build && npx rimraf src/util/gitlab.json",
+    "clean": "npx rimraf build/ dist/ node_modules/ coverage/ playwright-report/  *.svg src/util/gitlab.json",
     "config:dev": "npx shx cp config/dev.js public/env.js && npx shx cp config/dev.js build/env.js",
     "config:local": "npx shx cp config/local.js public/env.js && npx shx cp config/local.js build/env.js",
     "config:prod": "npx shx cp config/prod.js public/env.js && npx shx cp config/prod.js build/env.js",
     "config:test": "npx shx cp config/test.js public/env.js && npx shx cp config/test.js build/env.js",
-    "develop": "npx react-scripts start",
+    "develop": "npx shx cp config/gitlab.json src/util/gitlab.json && npx react-scripts start",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
     "gitlab:compile": "npx shx cp config/gitlab.json src/util/gitlab.json && npx tsc --project tsconfig.gitlab.json && npx rimraf src/util/gitlab.json",
     "gitlab:run": "node dist/gitlabDriver.js",
