--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -11,14 +11,14 @@
   "private": false,
   "license": "SEE LICENSE IN <LICENSE.md>",
   "scripts": {
-    "build": "npx tsc",
+    "build": "tsc",
     "clean": "npx rimraf build node_modules coverage dist src.svg test.svg",
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
     "start": "node dist/src/main.js",
     "start:pm2": "pm2 start pm2.config.js",
     "stop:pm2": "pm2 delete libms",
-    "syntax": "npx eslint . --fix",
+    "syntax": "eslint . --fix",
     "pretest": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md",
     "posttest": "npx rimraf ../../files/user2/tools/README.md",
     "test:all": "npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage",
@@ -59,8 +59,8 @@
     "@types/jest": "^29.5.12",
     "@types/node": "20.12.5",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
     "cross-fetch": "^4.0.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
