Add cmd test:e2e:int, update readme, add console-summary

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -27,8 +27,9 @@ jobs:
           cache: "yarn"
           cache-dependency-path: "**/yarn.lock"
 
-      - name: Install dependencies
+      - name: Install dependencies and setup env
         run: |
+          yarn config:test
           yarn install
           yarn playwright install --with-deps
 
