--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@gitbeaker/rest": "^40.1.2",
+    "@gitbeaker/rest": "^40.1.3",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.7",
@@ -75,6 +75,7 @@
     "redux": "^4.2.1",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.2.1",
+    "strip-ansi": "^7.1.0",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5"
   },
