--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -55,7 +55,7 @@ jobs:
           yarn build
           yarn test:all
 
-      - name: Run http mode tests
+      - name: Start http mode
         env:
           PORT: 4003
           LOCAL_PATH: ${{ github.workspace }}/files
@@ -66,7 +66,32 @@ jobs:
           cd servers/lib
           yarn install
           yarn build
+          yarn start:pm2
+      
+      - name: Check server is running
+        env:
+          PORT: 4003
+        uses: nick-fields/retry@v3
+        with:
+          timeout_seconds: 10
+          max_attempts: 4
+          command: "curl -f -LI http://localhost:${{ env.PORT }}/lib/files"
+          
+      - name: Run http test
+        env:
+          PORT: 4003
+          LOCAL_PATH: ${{ github.workspace }}/files
+          MODE: local
+          LOG_LEVEL: debug
+          APOLLO_PATH: /lib
+        run: |
+          cd servers/lib
           yarn test:http-github
+
+      - name: Stop http mode
+        run: |
+          cd servers/lib
+          yarn stop:pm2
 
       - name: Upload test coverage to Codecov
         uses: codecov/codecov-action@v3
