adds local compose file

--- a/servers/lib/compose.lib.dev.yml
+++ b/servers/lib/compose.lib.dev.yml
@@ -1,11 +1,9 @@
-version: '3'
 services:
   libms:
     build:
       context: ../../
       dockerfile: ./docker/libms.dockerfile
-    restart: unless-stopped
     volumes:
-      - ./files:/dtaas/libms/files
+      - ${LOCAL_PATH}:/dtaas/libms/files
     ports:
-      - "4001:4001"
+      - ${PORT}:4001
